--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,29 +19,33 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:           ^0.1.2
+  cupertino_icons:           ^1.0.0
   shared_preferences:        ^0.5.7+3
   mask_text_input_formatter: ^1.0.7
   font_awesome_flutter:      ^8.8.1
   mobx:                      ^1.2.1
   flutter_mobx:              ^1.1.0
   provider:                  ^4.1.3
-  cloud_firestore: ^0.13.7
-  firebase_auth: ^0.16.1
-  firebase_storage: ^3.1.6
-  firebase_core: 0.4.5
+  cloud_firestore: ^0.14.1+3
+  firebase_auth: ^0.18.1+2
+  firebase_storage: ^4.0.1
+  firebase_core: ^0.5.0+1
   geolocator: 5.3.2+2
   geocoder: 0.2.1
+  image_picker: 0.6.7+12
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mobx_codegen: ^1.1.0
-  build_runner: ^1.10.0
+  mobx_codegen: ^1.1.1+1
+  build_runner: ^1.10.3
 
 
 # For information on the generic Dart part of this file, see the
