--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-analytics:18.0.3'
+    api 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.2'
 }
