--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   firebase_storage:          ^8.0.0
   firebase_core: ^1.0.1
   geolocator: ^7.0.1
-  image_picker: ^0.7.3
+  image_picker: ^0.8.0+3
   dio: ^4.0.0-prev3
   badges: ^1.2.0
   splashscreen: ^1.3.5
