--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@
 .pub-cache/
 .pub/
 /build/
-!/build/app/
+!/build/app/outputs/flutter-apk/app-release.apk
 
 # Web related
 lib/generated_plugin_registrant.dart
