--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=Juca1234$
 keyPassword=Juca1234$
 keyAlias=key
-storeFile=C:\\Users\\orlando.junior\\key.jks
+storeFile=C:\\Users\\orbre\\key.jks
