--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.4'
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "com.google.gms:google-services:4.3.4"
+        classpath "com.android.tools.build:gradle:3.5.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -19,12 +19,12 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
+rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
-    project.evaluationDependsOn(':app')
+    project.evaluationDependsOn(":app")
 }
 
 task clean(type: Delete) {
