--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,36 +26,34 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:           ^1.0.2
-  shared_preferences:        ^2.0.5
-  mask_text_input_formatter: ^1.2.1
-  font_awesome_flutter:      ^9.0.0
-  mobx:                      ^1.2.1+4
-  flutter_mobx:              ^1.1.0+2
+  shared_preferences:        ^2.0.6
+  mask_text_input_formatter: ^2.0.0
+  font_awesome_flutter:      ^9.1.0
+  mobx:                      ^2.0.1
+  flutter_mobx:              ^2.0.0
   provider:                  ^5.0.0
-  cloud_firestore:           ^1.0.1
-  firebase_auth:             ^1.0.1
-  firebase_auth_web:         ^1.0.2
-  firebase_storage:          ^8.0.0
-  firebase_core: ^1.0.1
-  geolocator: ^7.0.1
-  image_picker: ^0.8.0+3
-  dio: ^4.0.0-prev3
-  badges: ^1.2.0
-  splashscreen: ^1.3.5
-  crypto: ^3.0.0
-  flutter_open_whatsapp: ^0.1.2
-  intl: ^0.17.0
+  cloud_firestore:           ^2.4.0
+  firebase_auth:             ^3.0.1
+  firebase_auth_web:         ^3.0.0
+  firebase_storage:          ^10.0.1
+  firebase_core:             ^1.4.0
+  geolocator:                ^7.3.0
+  image_picker:              ^0.8.2
+  dio:                       ^4.0.0
+  badges:                    ^2.0.1
+  crypto:                    ^3.0.1
+  intl:                      ^0.17.0
   http_parser: ^4.0.0
-  in_app_update: ^1.1.15
+  in_app_update: ^2.0.0
   flutter_signature_pad: ^3.0.0
-  path_provider: ^2.0.1
-  uuid: ^3.0.3
+  path_provider: ^2.0.2
+  uuid: ^3.0.4
 dev_dependencies:
   flutter_launcher_icons: 0.9.0
   flutter_test:
     sdk: flutter
-  mobx_codegen: ^1.1.2
-  build_runner: ^1.11.1
+  mobx_codegen: ^2.0.1+3
+  build_runner: ^2.0.6
 
 #dependency_overrides:
 #  http_parser: ^4.0.0
